# ogc-api-processes-fastapi

./: .cruft.json  Dockerfile  Makefile  README.md  environment-minver.yml  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: main.yaml  on-push.yml
ci/: environment-ci.yml  environment-integration.yml
docs/: conf.py  index.md
ogc_api_processes_fastapi/: __init__.py  api.py  api_temp.py  clients.py  config.py  endpoints.py  errors.py  exceptions.py  main.py  models.py  responses.py  routers.py
ogc_api_processes_fastapi/api/: app.py
ogc_api_processes_fastapi/types/: core.py
tests/: conftest.py  test_00_version.py  test_01_main.py  test_02_endpoints.py  test_10_app_instantiation.py  test_10_endpoints.py  test_10_main.py  test_10_responses.py  test_20_api.py  test_20_endpoints.py  test_30_endpoints.py  testing.py
