[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "attrs",
  "fastapi",
  "pydantic>2",
  "pydantic-settings>2"
]
description = "OGC API Processes service based on FastAPI"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "ogc-api-processes-fastapi"
readme = "README.md"

[tool.coverage.run]
branch = true

[tool.mypy]
strict = true

[tool.ruff]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1"
]
# Black line length is 88, but black does not format comments.
line-length = 110
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.setuptools]
packages = ["ogc_api_processes_fastapi"]

[tool.setuptools_scm]
write_to = "ogc_api_processes_fastapi/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
